--- a/backend/variables.env
+++ b/backend/variables.env
@@ -1,6 +1,6 @@
 FRONTEND_URL="http://localhost:7777"
-PRISMA_ENDPOINT="yougottafillthisout"
-PRISMA_SECRET="omgplzdonttellanyone"
+PRISMA_ENDPOINT="https://us1.prisma.sh/francis-miyoba-be13c4/shop-demo/dev"
+PRISMA_SECRET="lololololol"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
